PDI-7299 : PGP Encryption in Linux, "No public key" or "public key not found"
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/branches/4.3.0@16286 5fb7f6ec-07c1-534a-b4ca-9155e429e800